Fix bug #descrOrariTable visible in footer

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -50,7 +50,7 @@ html {
 
 .navigationHelp{
     position: absolute;
-    text-indent: -999em;
+    text-indent: -9999em;
     font-size: 1px;
 }
 
